--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 @import url('https://cdn.syncfusion.com/ej2/bootstrap5.css');
+
+
+
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 .sidebar {
@@ -50,4 +53,27 @@
 
 .e-control {
   font-family: 'Work Sans' !important;
+}
+
+.e-pager,
+.e-pager .e-currentitem
+ {
+  background-color: #0B132B;
+  color: white;
+}
+
+
+.e-pager .e-prevpagedisabled,
+.e-pager .e-prevpage,
+.e-pager .e-nextpage,
+.e-pager .e-nextpagedisabled,
+.e-pager .e-lastpagedisabled,
+.e-pager .e-lastpage,
+.e-pager .e-firstpage,
+.e-pager .e-firstpagedisabled {
+    background-color: #ffffff;
+}
+
+.e-pager .e-pagercontainer {
+  background-color: #deecf9;
 }
